For ENG-4559, set a variety of JVM GC options to enable concurrent old gen GC